css/galery.css
* {
    box-sizing: border-box;
}

body {
    margin: 0;
    padding: 0;
}
/*navigation with links*/
.navbar {   
    display: flex;
    justify-content: space-between;
    align-items: center;    
    border-bottom: 5px solid orange;        
}

.icon {    
    width: 40px; 
    margin-left: 10px;   
}

.navbar-links ul {
    margin: 0;
    padding: 0;
    display: flex;     
       
}

.navbar-links li {
    list-style-type: none;
       
}

.navbar-links li a {
    text-decoration: none;
    color:orange;    
    display: block;
    padding: 15px; 
         
}  

.navbar-links li a:hover {
    
    background-color: orange;
    color: white;
    
  } 
  
/*header image*/
.header-img {
    background-image: url('../img/contest_image.jpg');
    background-size: cover;
    background-position: center;    
    min-height: 300px;
    
}

.header-content {
    color: white;
    text-align: justify;
    max-width: 350px;
    margin:auto;    
    padding-top:20px;
}

.header-content h3{
    margin:0;    
}

/*grid with image galery*/
.img-container {        
    display: grid;
    justify-content: center;    
    justify-items: center;    
    grid-template-columns: 14% 14% 14% 14%;   
    row-gap: 15px;
    column-gap: 20px;
    margin-top: 15px; 
  
}

.img-container .item img {    
    width: 250px;
    height: 250px;   
}
    
/*footer*/
.footer { 
    font-size:13px;   
    background-color: orange;
    padding: 2px 0;   
    color: white;    
    display: flex;
    justify-content: center;
    max-width: 100%;
}
.upload {            
    display: flex;
    justify-content: flex-end;    
}
.upload img {
    width: 80px;                
    margin-right: 20px;
    margin-bottom: 20px;
}

.upload img:hover {
    cursor:pointer;
}
/*laptop view*/
@media (max-width:1024px) {
    .img-container {
    grid-template-columns: 50% 50%;        
    column-gap: 20px; }  
    
    .upload{
        margin-top: 180px;
    } 
  
}

@media (max-width:555px) {
    .navbar-links li a {
        padding: 15px 2px;        
    }
}

/*mobile view*/
@media (max-width:400px) {

    .navbar {
        flex-direction: column;
        align-items: flex-start;
        
    }
    .navbar-links{
        width: 100%;
        padding-top: 20px;
        padding-bottom: 20px;
    }
    .navbar-links ul {
        flex-direction: column;
        width: 100%;
        
    }
    .navbar-links li a {
        padding: 5px 10px;
    }

    .img-container {
        grid-template-columns: 50%; 
        }

    .upload{
        margin-top: 180px;
    } 
        
}

